# hallu-defense-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
apps/api/: pyproject.toml
apps/api/src/hallu_defense/: __init__.py  config.py  main.py  worker.py  (+3 more)
apps/api/tests/: conftest.py  test_apply_postgres_migrations.py  test_approval_queue.py  test_approval_queue_config.py  test_audit_ledger.py  test_audit_ledger_config.py  test_auth.py  test_auth_config.py  test_backup_restore_drill.py  test_backup_retention_config.py  test_bootstrap_kind_vault.py  test_bootstrap_local_vault.py  test_check_e2e_python_source.py  test_claim_services.py  test_container_scan_config.py  test_content_security_redaction.py  test_contract_v2.py  test_contract_versions_config.py  test_contracts.py  test_core_flow.py  test_corpus_grants.py  test_corpus_grants_config.py  test_cors_config.py  test_data_lifecycle.py  test_development_context_config.py  test_eval_ingestion_config.py  test_eval_reports.py  test_eval_runner_thresholds.py  test_eval_scenarios.py  test_eval_smoke.py  test_eval_thresholds_config.py  test_eval_thresholds_loader.py  test_fable_delegation_config.py  test_foundation_docs.py  test_foundation_infra.py  test_gitleaks_gate.py  test_helm_chart_config.py  test_hybrid_rag_config.py  test_ingestion_jobs.py  test_ingestion_pipeline_config.py  (+82 more)
(+423 files in other folders)
